crates/aranya-policy-compiler/tests/data/type_errors/unwrap_non_option_invalid_type.fail.policy
function g(x int) bool {
    return unwrap x
}
